// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UiProgress /> should render the normal progressbar 1`] = `
<div>
  <div
    class="css-7pf6at"
  >
    <div
      class="css-1fkj06j"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        class="css-18ylzah"
        role="progressbar"
        style="width: 20%;"
      />
    </div>
  </div>
</div>
`;

exports[`<UiProgress /> should render the progress with a icon slot 1`] = `
<div>
  <div
    class="css-7pf6at"
  >
    <div
      class="css-1kr4fmq"
    >
      <div>
        sample
      </div>
    </div>
    <div
      class="css-1fkj06j"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="css-18ylzah"
        role="progressbar"
        style="width: 50%;"
      />
    </div>
  </div>
</div>
`;
